--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-# Core dependencies for Lixplore CLI
+# Core dependencies
+biopython>=1.79
+requests>=2.25.0
+litstudy>=1.0.0
+openpyxl>=3.0.0
 
-# PubMed search via NCBI Entrez API
-biopython>=1.84
-
-# HTTP requests for API calls (Crossref, DOAJ, EuropePMC, arXiv)
-requests>=2.31.0
-
-# Optional: Alternative literature study library
-litstudy>=1.0.6
+# These are dependencies of the above packages (will be installed automatically)
+# Listed here for reference only
+# numpy>=1.19.0
+# scipy>=1.5.0
+# certifi
+# charset-normalizer
+# idna
+# Unidecode
+# urllib3
