--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,19 +9,30 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    env:
+      PYTHONUTF8: '1'
+      PYTHONIOENCODING: 'utf-8'
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    
+    - name: Configure Windows UTF-8 console
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        chcp 65001
+        $OutputEncoding = [Console]::OutputEncoding = [Text.UTF8Encoding]::new()
+        [Console]::InputEncoding = [Text.UTF8Encoding]::new()
     
     - name: Install dependencies
       run: |
