--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
     
     - name: Configure Windows UTF-8 console
       if: runner.os == 'Windows'
@@ -36,9 +37,13 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel
         pip install -r requirements.txt
         pip install -e .
+
+    - name: Test basic functionality
+      run: |
+        lixplore -P -q "test" -m 2
     
     - name: Test installation
       run: |
