--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,17 +3,17 @@ requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "lixplore"
+name = "lixplore-cli"
 version = "1.0.0"
 description = "Academic Literature Search & Export CLI Tool"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Pryndor", email = "noreply@github.com"}
+    {name = "Balasubramanian Periannan", email = "balathepharmacist@gmail.com"}
 ]
 maintainers = [
-    {name = "Pryndor", email = "noreply@github.com"}
+    {name = "Balasubramanian Periannan", email = "balathepharmacist@gmail.com"}
 ]
 keywords = [
     "literature",
